--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -1,7 +1,17 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 canvas {
   padding-left: 0;
   padding-right: 0;
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+
+.center {
+  display: block;
+  margin: auto;
 }
