--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
-
 canvas {
   padding-left: 0;
   padding-right: 0;
@@ -10,8 +10,15 @@ canvas {
   margin-right: auto;
   display: block;
 }
-
 .center {
-  display: block;
-  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bg { 
+  background-image: url("../img/background2.jpeg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
