--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  color: white;
 }
 canvas {
   padding-left: 0;
@@ -9,6 +10,10 @@ canvas {
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+#title {
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 46px;
 }
 .center {
   display: flex;
