--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -6,6 +6,7 @@ body {
   background-color: black;
   background-image: url("../img/background2.jpeg");
   height: 100%;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,13 +17,21 @@ canvas {
   margin-left: auto;
   margin-right: auto;
   display: block;
+  margin-bottom: 20px;
 }
 #title {
   font-family: Impact, Charcoal, sans-serif;
   font-size: 46px;
+  margin-bottom: 20px;
 }
 .center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.stat {
+  margin: 0px 10px 20px 10px;
+  padding: 10px 20px 10px 20px;
+  border-radius: 5px;
+  background-color: rgba(158, 169, 255, 0.521);
 }
