--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -1,3 +1,8 @@
+@keyframes example {
+  0%   {background-color: rgba(158, 169, 255, 0.521);}
+  100% {background-color: green;}
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -18,20 +23,29 @@ canvas {
   margin-right: auto;
   display: block;
   margin-bottom: 20px;
+  margin-right: 30px;
 }
 #title {
   font-family: Impact, Charcoal, sans-serif;
-  font-size: 46px;
+  font-size: 60px;
   margin-bottom: 20px;
+}
+#instructions {
+  width: 400px;
+  font-family: Courier New, Courier, monospace;
+  font-size: 24px;
+}
+#timerDiv, #moveCountDiv {
+  margin: 0px 10px 20px 10px;
+  padding: 10px 20px 10px 20px;
+  border-radius: 5px;
+  background-color: rgba(158, 169, 255, 0.521);
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 .center {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.stat {
-  margin: 0px 10px 20px 10px;
-  padding: 10px 20px 10px 20px;
-  border-radius: 5px;
-  background-color: rgba(158, 169, 255, 0.521);
 }
