--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -2,6 +2,9 @@
   0%   {background-color: rgba(158, 169, 255, 0.521);}
   100% {background-color: green;}
 }
+@font-face {
+  font-family: Mystic-Singler; src: url('../fonts/Mystic-Singler.ttf');
+} 
 
 body {
   margin: 0;
@@ -19,25 +22,28 @@ body {
 canvas {
   padding-left: 0;
   padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px auto 20px auto;
   display: block;
-  margin-bottom: 20px;
-  margin-right: 30px;
 }
 #title {
-  font-family: Impact, Charcoal, sans-serif;
-  font-size: 60px;
+  font-family: Mystic-Singler, Charcoal, sans-serif;
+  font-size: 80px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 #instructions {
   width: 400px;
   font-family: Courier New, Courier, monospace;
   font-size: 24px;
+  margin-left: 10px;
 }
 #timerDiv, #moveCountDiv {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
   margin: 0px 10px 20px 10px;
-  padding: 10px 20px 10px 20px;
+  padding: 0px 20px 0px 20px;
+  width: 80px;
   border-radius: 5px;
   background-color: rgba(158, 169, 255, 0.521);
   animation-duration: 1s;
@@ -48,4 +54,12 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.center-text {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+.label {
+  font-size: 150%;
 }
