--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -39,7 +39,7 @@ th, td {
   width: 400px;
   font-family: Courier New, Courier, monospace;
   font-size: 24px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 #timerDiv, #moveCountDiv {
   font-family: "Comic Sans MS", cursive, sans-serif;
@@ -62,6 +62,7 @@ th, td {
 }
 .center {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -72,4 +73,24 @@ th, td {
 }
 .label {
   font-size: 150%;
+}
+
+@media only screen and (max-width: 900px) {
+  #title {
+    font-family: Mystic-Singler, Charcoal, sans-serif;
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  #instructions {
+    width: 400px;
+    font-family: Courier New, Courier, monospace;
+    font-size: 16px;
+  }
+  .center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
