--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -62,6 +62,7 @@ th, td {
 }
 .center {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -72,4 +73,14 @@ th, td {
 }
 .label {
   font-size: 150%;
+}
+
+@media only screen and (max-width: 900px) {
+
+  .center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
