Add leaderboard title and alignment of instructions and leaderboard

--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -38,7 +38,7 @@ th, td {
 #instructions {
   width: 400px;
   font-family: Courier New, Courier, monospace;
-  font-size: 24px;
+  font-size: 20px;
   margin-left: 20px;
 }
 #timerDiv, #moveCountDiv {
@@ -56,9 +56,14 @@ th, td {
 }
 #leaderBoardDiv {
   height: 400px;
+  width: 400px;
+  font-family: Courier New, Courier, monospace;
+  font-size: 20px;
+  margin-left: 20px;
 }
 #leaderBoard {
   overflow-y: auto;
+  font-size: 16px;
 }
 .center {
   display: flex;
@@ -78,14 +83,17 @@ th, td {
 @media only screen and (max-width: 900px) {
   #title {
     font-family: Mystic-Singler, Charcoal, sans-serif;
-    font-size: 40px;
+    font-size: 54px;
     margin-top: 20px;
     margin-bottom: 20px;
   }
   #instructions {
-    width: 400px;
-    font-family: Courier New, Courier, monospace;
-    font-size: 16px;
+    width: auto;
+    margin: 0px;
+  }
+  #leaderBoardDiv {
+    width: auto;
+    margin: 0px;
   }
   .center {
     display: flex;
