--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -1,31 +1,49 @@
 @keyframes example {
-  0%   {background-color: rgba(158, 169, 255, 0.521);}
-  100% {background-color: green;}
+  0% {
+    background-color: rgba(158, 169, 255, 0.521);
+  }
+  100% {
+    background-color: green;
+  }
 }
-@font-face {
-  font-family: Mystic-Singler; src: url('../fonts/Mystic-Singler.ttf');
-} 
 
-body {
+@font-face {
+  font-family: Mystic-Singler;
+  src: url('../fonts/Mystic-Singler.ttf');
+}
+
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  height: 100%;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
   color: white;
-  background-color: black;
-  background-image: url("../img/background2.jpeg");
-  height: 100%;
+  font-family: Courier New, Courier, monospace;
+  font-weight: 400;
+  line-height: 1.7;
+  background-image: url('../img/background.jpeg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 canvas {
-  padding-left: 0;
-  padding-right: 0;
   margin: 0px auto 20px auto;
   display: block;
 }
-th, td {
+
+th,
+td {
   padding: 10px 30px 10px 30px;
   text-align: left;
 }
@@ -35,20 +53,19 @@ th, td {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-#instructions {
+.instructions {
   width: 400px;
-  font-family: Courier New, Courier, monospace;
   font-size: 20px;
   margin-left: 20px;
 }
-#timerDiv, #moveCountDiv {
-  font-family: "Comic Sans MS", cursive, sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  margin: 0px 10px 20px 10px;
-  padding: 0px 20px 0px 20px;
-  width: 80px;
-  border-radius: 5px;
+
+.stats {
+  text-align: center;
+  margin-left: 1rem;
+  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+  width: 10rem;
   background-color: rgba(158, 169, 255, 0.521);
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -71,19 +88,15 @@ th, td {
   align-items: center;
   justify-content: center;
 }
-.center-text {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  text-align: center;
-}
+
 .label {
-  font-size: 150%;
+  font-size: 2rem;
 }
 
 @media only screen and (max-width: 900px) {
   #title {
     font-family: Mystic-Singler, Charcoal, sans-serif;
-    font-size: 54px;
+    font-size: 4rem;
     margin-top: 20px;
     margin-bottom: 20px;
   }
