--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -1,6 +1,6 @@
-@keyframes example {
+@keyframes flash {
   0% {
-    background-color: rgba(158, 169, 255, 0.5);
+    background-color: #808080c9;
   }
   100% {
     background-color: green;
@@ -29,7 +29,8 @@ body {
   color: white;
   font-family: Courier New, Courier, monospace;
   font-weight: 400;
-  line-height: 1.7;
+  font-size: 1.6rem;
+  line-height: 1.3;
   background-image: url('../img/background.jpeg');
   background-attachment: fixed;
   background-position: center;
@@ -49,9 +50,10 @@ body {
 
 .title {
   font-family: Mystic-Singler, Charcoal, sans-serif;
-  font-size: 5rem;
-  margin-bottom: 1rem;
+  font-size: 4rem;
+  margin-bottom: 2rem;
   text-align: center;
+  letter-spacing: 0.5rem;
 }
 
 .stats {
@@ -62,26 +64,25 @@ body {
 
 .label {
   font-size: 2rem;
+  font-weight: 700;
 }
 
 .stats--stat {
   text-align: center;
   margin: 0 1rem;
   padding: 1rem;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  font-weight: 700;
-  font-size: 1.4rem;
-  width: 10rem;
-  background-color: rgba(158, 169, 255, 0.521);
+  width: 12rem;
+  background-color: #808080c9;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  animation-timing-function: linear;
 }
 
 .select-size {
   display: flex;
   justify-content: center;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .input {
@@ -97,7 +98,7 @@ body {
 }
 
 .instructions {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   text-align: justify;
 }
 
@@ -125,10 +126,11 @@ td {
   .title {
     font-size: 10rem;
     text-align: center;
+    letter-spacing: 1rem;
   }
 
   .select-size {
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
   }
 
   .info {
