--- a/css/fifteen.css
+++ b/css/fifteen.css
@@ -39,9 +39,12 @@ body {
 }
 
 .canvas {
-  display: flex;
-  justify-content: center;
   margin-bottom: 2rem;
+}
+
+.board {
+  display: block;
+  margin: auto;
 }
 
 .content {
