--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,21 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
+  padding: 3rem;
+  font-size: 1.6rem;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -6,16 +24,18 @@
 }
 
 #game {
-  width: 32rem;
+  width: 35rem;
   text-align: center;
 }
 
 #board {
+  display: flex;
+  flex-wrap: wrap;
   height: 30rem;
   width: 30rem;
   margin: auto;
-  border: 0.1rem solid black;
   padding: 1rem;
+  border: 0.1rem solid black;
   margin-bottom: 2rem;
   border-radius: 1rem;
 }
@@ -24,10 +44,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 6.5rem;
-  height: 6.5rem;
   border: 0.1rem solid black;
-  margin: 0.2rem;
   border-radius: 1rem;
   transition: all 0.2s ease-out;
   cursor: pointer;
@@ -43,6 +60,10 @@
 
 .empty {
   opacity: 0;
+}
+
+.instructions {
+  text-align: left;
 }
 
 .tile:hover {
