--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,6 +6,10 @@
   box-sizing: inherit;
 }
 
+:root {
+  --board-columns: 4;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -20,8 +24,8 @@ body {
 }
 
 .container {
-  max-width: 60rem;
-  margin: 4rem auto;
+  max-width: 62rem;
+  margin: 3rem auto;
   padding: 0 1rem;
 
   display: grid;
