--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,21 +1,51 @@
+body {
+  font-family: $font-primary;
+  color: $color-grey-dark-1;
+  font-weight: 300;
+  line-height: 1.6;
+  font-size: 3.5vw;
+}
+
 %heading {
   font-family: $font-primary;
   font-weight: 400;
   line-height: 1;
-  text-transform: uppercase;
+}
+
+%heading-1 {
+  @extend %heading;
+  font-size: 13vw;
+}
+
+%heading-2 {
+  @extend %heading;
+  font-size: 5.5vw;
 }
 
 .heading-1 {
-  @extend %heading;
-  font-size: 6rem;
+  @extend %heading-1;
 }
 
 .heading-2 {
-  @extend %heading;
-  font-size: 4rem;
+  @extend %heading-2;
 }
 
-.heading-3 {
-  @extend %heading;
-  font-size: 3rem;
+.text {
+  &--uppercase {
+    text-transform: uppercase;
+  }
+}
+
+@media screen and (min-width: 630px) {
+  body {
+    font-size: 2.5rem;
+  }
+
+  %heading-1 {
+    font-size: 8rem;
+  }
+  
+  %heading-2 {
+    font-size: 3rem;
+  }
 }
