--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,23 +1,84 @@
 .header {
-  font-size: 2rem;
-  text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 
-  display: grid;
-  grid-template-rows: min-content, 20rem;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-
-  &__title {
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
+  &__logo {
+    @extend %heading-1;
     text-align: center;
-    align-self: center;
+    margin-bottom: 8vw;
+    text-shadow: 0.1em 0.1em 0.2em pink;
+  }
+
+  &__controls {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1vw;
+    text-align: center;
+    padding: 1.5vw;
+    border-radius: 1vw;
+
+    & > * {
+      border-radius: inherit;
+      padding: 2vw 3vw;
+    }
+
+    button {
+      @extend %heading-2;
+      font-family: $font-primary;
+      color: inherit;
+      border: none;
+      background-color: $color-primary;
+      transition: all 0.2s;
+    
+      &:active,
+      &:focus {
+        outline: none;
+      }
+
+      &:hover {
+        transform: translateY(-0.1rem);
+      }
+
+      &:active,
+      &:focus,
+      &:hover {
+        box-shadow: 0 0.3em 1em rgba(#000, 0.2);
+      }
+    }
   }
 }
 
 .moves,
 .time {
-  padding: 1rem;
-  border-radius: 5px;
   background-color: $color-secondary;
+
+  &__title {
+    @extend %heading-2;
+  }
+}
+
+@media screen and (min-width: 630px) {
+  .header {
+    flex-flow: row nowrap;
+
+    &__logo {
+      margin-bottom: 0;
+    }
+
+    &__controls {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1rem;
+
+      & > * {
+        padding: 0.5em 0.8em;
+      }
+    }
+  }
+
+  .moves,
+  .time {
+    padding: 1rem;
+    border-radius: 1rem;
+  }
 }
