--- a/src/styles/components/_instructions.scss
+++ b/src/styles/components/_instructions.scss
@@ -2,10 +2,7 @@
   text-align: left;
 
   &__heading {
+    @extend %heading-2;
     margin-bottom: 2rem;
-  }
-
-  &__text {
-    font-size: 2.1rem;
   }
 }
